Additional params added to Get All Restaurants
